--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -13,10 +13,13 @@
         <td>{{hive.name}}</td>
         <td>
           <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
-            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted" (click)="onDelete(hive.id)">
-              <button type="button" class="btn btn-danger">Delete</button>
+            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted">
+              <button type="button" class="btn btn-danger" (click)="onDelete(hive.id)" >Delete</button>
             </div>
-            <div class="btn-group mr-2" role="group" aria-label="View group">
+             <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" (click)="onRestore(hive.id)">
+              <button type="button" class="btn btn-success">Restore</button>
+            </div>
+              <div class="btn-group mr-2" role="group" aria-label="View group">
               <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-primary">View sections</button>
             </div>
             <div class="btn-group" role="group" aria-label="Edit group">
