--- a/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-form.component.html
@@ -9,7 +9,7 @@
     <div class="form-group">
       <label for="name" id="nameLabel">Hive Name</label>
       <input type="text" class="form-control" id="name" aria-describedby="nameLabel" minlength="4" maxlength="60" required [(ngModel)]="hive.name"
-        name="name" #name="ngModel">
+        name="name" #name="ngModel"  #nameHive>
       <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
         <div *ngIf="name.errors.required">Hive Name is required.</div>
         <div *ngIf="name.errors.minlength">Hive Name must be at least 4 characters long.</div>
@@ -18,7 +18,7 @@
     <div class="form-group">
       <label for="code" id="codeLable">Hive Code</label>
       <input type="text" class="form-control" id="code" aria-describedby="codeLable" minlength="5" maxlength="5" required [(ngModel)]="hive.code"
-        name="code" #code="ngModel">
+        name="code" #code="ngModel" #codeHive>
       <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-danger">
         <div *ngIf="code.errors.minlength">Hive Code must be equal to 5 characters long.</div>
         <div *ngIf="code.errors.maxlength">Hive Code must be equal to 5 characters long.</div>
@@ -27,7 +27,7 @@
     <div class="form-group">
       <label for="address" id="addressLable">Hive Address</label>
       <input type="text" class="form-control" id="address" aria-describedby="addressLable" minlength="5" maxlength="300" required [(ngModel)]="hive.address"
-        name="address" #address="ngModel">
+        name="address" #address="ngModel" #addressHive>
       <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
         <div *ngIf="address.errors.minlength">Hive Address must be at least 5 characters long.</div>
         <div *ngIf="address.errors.maxlength">Hive Address must be no more than 300 characters long.</div>
@@ -42,17 +42,17 @@
       <div class="btn-group mr-2" role="group" aria-label="Back group" (click)="navigateToHives()">
         <button type="button" class="btn btn-primary">Back</button>
       </div>
-      <div class="btn-group mr-2" role="group" aria-label="View group"  (click)="onSubmit(hive)">
-        <button type="button" class="btn btn-primary">Save</button>
+      <div class="btn-group mr-2" role="group" aria-label="View group" >
+        <button type="button" class="btn btn-primary" (click)="onSubmit(hive)">Save</button>
       </div>
-      <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted" (click)="onDelete(hive.id)">
-        <button type="button" class="btn btn-danger">Delete</button>
+      <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted">
+        <button type="button" class="btn btn-danger" (click)="onDelete(hive.id, hive)">Delete</button>
       </div>
-      <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" (click)="onUndelete(hive.id)">
-        <button type="button" class="btn btn-success">Undelete</button>
+      <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" >
+        <button type="button" class="btn btn-success" (click)="onUndelete(hive.id, hive)">Undelete</button>
       </div>
       <div class="btn-group mr-2" role="group" aria-label="View group" >
-        <button type="button" class="btn btn-primary">Purge</button>
+        <button type="button" class="btn btn-primary" (click)="nameHive.value = ''" (click)="codeHive.value = ''" (click)="addressHive.value = ''">Purge</button>
       </div>
     </span>
   </form>
