--- a/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
+++ b/KatlaSportNg/src/app/hive-management/forms/hive-section-form.component.html
@@ -1,3 +1,51 @@
-<p>
-  hive-section-form works!
-</p>
+<div class="container">
+  <h2>Hive Section Editor</h2>
+  <form (ngSubmit)="onSubmit(hiveSection)" #hiveSectionForm="ngForm">
+    <div class="form-group" *ngIf='existed'>
+      <label for="id" id="idLabel">ID</label>
+      <input type="text" class="form-control" id="id" aria-describedby="idLabel" required [(ngModel)]="hiveSection.id"
+       name="id" #id="ngModel" readonly>
+    </div>
+    <div class="form-group">
+      <label for="name" id="nameLabel">Hive Section Name</label>
+      <input type="text" class="form-control" id="name" aria-describedby="nameLabel" minlength="4" maxlength="60" required [(ngModel)]="hiveSection.name"
+        name="name" #name="ngModel"  #nameHiveSection>
+      <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+        <div *ngIf="name.errors.required">Hive Section Name is required.</div>
+        <div *ngIf="name.errors.minlength">Hive Section Name must be at least 4 characters long.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="code" id="codeLable">Hive Section Code</label>
+      <input type="text" class="form-control" id="code" aria-describedby="codeLable" minlength="5" maxlength="5" required [(ngModel)]="hiveSection.code"
+        name="code" #code="ngModel" #codeHiveSection>
+      <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-danger">
+        <div *ngIf="code.errors.minlength">Hive Section Code must be equal to 5 characters long.</div>
+        <div *ngIf="code.errors.maxlength">Hive Section Code must be equal to 5 characters long.</div>
+      </div>
+    </div>
+    <div class="form-group" *ngIf='existed'>
+      <label for="lastUpdated" id="lastUpdatedLabel">Last Update</label>
+      <input type="text" class="form-control" id="lastUpdated" aria-describedby="lastUpdatedLabel" required [(ngModel)]="hiveSection.lastUpdated"
+        name="lastUpdated" #lastUpdated="ngModel" readonly>
+    </div>
+    <span class="btn-toolbar" role="toolbar" aria-label="Hive Section action buttons" style="display: block; white-space:nowrap;">
+      <div class="btn-group mr-2" role="group" aria-label="Back group" (click)="navigateToHives()">
+        <button type="button" class="btn btn-primary">Back</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="View group" >
+        <button type="button" class="btn btn-primary" (click)="onSubmit(hiveSection)">Save</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hiveSection.isDeleted">
+        <button type="button" class="btn btn-danger" (click)="onDelete(hiveSection.id, hiveSection)">Delete</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hiveSection.isDeleted" >
+        <button type="button" class="btn btn-success" (click)="onUndelete(hiveSection.id, hiveSection)">Undelete</button>
+      </div>
+      <div class="btn-group mr-2" role="group" aria-label="View group" >
+        <button type="button" class="btn btn-primary" (click)="nameHiveSection.value = ''" (click)="codeHiveSection.value = ''">Purge</button>
+      </div>
+    </span>
+  </form>
+</div>
+
