--- a/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-list.component.html
@@ -19,8 +19,8 @@
              <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" (click)="onRestore(hive.id)">
               <button type="button" class="btn btn-success">Restore</button>
             </div>
-              <div class="btn-group mr-2" role="group" aria-label="View group">
-              <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-primary">View sections</button>
+              <div class="btn-group mr-2" role="group" aria-label="View group" (click)="onViewSections(hive.id)">
+              <button type="button" class="btn btn-primary">View sections</button>
             </div>
             <div class="btn-group" role="group" aria-label="Edit group">
               <button routerLink="/hive/{{hive.id}}" type="button" class="btn btn-primary">Edit</button>
