--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -7,23 +7,20 @@
         <th scope="col">Name</th>   
     </thead>
     <tbody>
-      <tr *ngFor="let hive of hiveSections">
-        <th scope="row">{{hive.id}}</th>
-        <td>{{hive.code}}</td>
-        <td>{{hive.name}}</td>
+      <tr *ngFor="let hiveSection of hiveSections">
+        <th scope="row">{{hiveSection.id}}</th>
+        <td>{{hiveSection.code}}</td>
+        <td>{{hiveSection.name}}</td>
         <td>
           <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
-            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hive.isDeleted" (click)="onDelete(hive.id)">
+            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hiveSection.isDeleted" (click)="onDelete(hiveSection.id)">
               <button type="button" class="btn btn-danger">Delete</button>
             </div>
-            <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hive.isDeleted" (click)="onUndelete(hive.id)">
+            <div class="btn-group mr-2" role="group" aria-label="Restore group" *ngIf="hiveSection.isDeleted" (click)="onUndelete(hiveSection.id)">
               <button type="button" class="btn btn-success">Undelete</button>
             </div>
-            <div class="btn-group mr-2" role="group" aria-label="View group">
-              <button routerLink="/hive/{{hive.id}}/sections" type="button" class="btn btn-primary">View sections</button>
-            </div>
             <div class="btn-group" role="group" aria-label="Edit group">
-              <button routerLink="/hive/{{hive.id}}" type="button" class="btn btn-primary">Edit</button>
+              <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
             </div>
           </span>
         </td>
@@ -34,8 +31,8 @@
     <div class="btn-group mr-1" role="group" aria-label="Back group">
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
-    <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
+    <div class="btn-group" role="group" aria-label="Add group" (click)="onNewHiveSection(hiveId)">
+      <button type="button" class="btn btn-primary">Add hive section</button>
     </div>
   </div>
 </div>
